[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/TestDungeon/TestDungeon.gd" type="Script" id=1]
[ext_resource path="res://scenes/Dungeon/Dungeon.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/FemaleCharacter/FemaleCharacter.tscn" type="PackedScene" id=3]
[ext_resource path="res://tools/Camera/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/TestDungeon/CameraMap.gd" type="Script" id=5]
[ext_resource path="res://ui/Game/Health/Health.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/Game/Ammo/Ammo.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/Menu/Menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/DataPad/DataPad.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/Loading/Loading.tscn" type="PackedScene" id=10]
[ext_resource path="res://tools/Notifications/Notifications.tscn" type="PackedScene" id=11]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[node name="TestDungeon" type="Node"]
script = ExtResource( 1 )

[node name="World" type="Spatial" parent="."]
editor/display_folded = true

[node name="Level" type="Spatial" parent="World"]
editor/display_folded = true

[node name="Dungeon" parent="World/Level" instance=ExtResource( 2 )]

[node name="Player" parent="World" instance=ExtResource( 3 )]

[node name="Skeleton" parent="World/Player" index="1"]
bones/5/bound_children = [ NodePath("Head") ]
bones/22/bound_children = [ NodePath("RightHand") ]
bones/35/bound_children = [ NodePath("LeftFoot") ]
bones/40/bound_children = [ NodePath("RightFoot") ]

[node name="Head" parent="World/Player/Skeleton" index="1"]
transform = Transform( 0.999444, 0.0212299, 0.0257244, -0.0201563, 0.998944, -0.0412876, -0.0265739, 0.0407464, 0.998816, -0.0256692, 1.56014, -0.0580129 )

[node name="RightHand" parent="World/Player/Skeleton" index="2"]
transform = Transform( 0.326972, 0.101195, 0.939599, 0.139156, -0.988567, 0.0580449, 0.934732, 0.111773, -0.337317, -0.216058, 0.949554, -0.0134094 )

[node name="RightFoot" parent="World/Player/Skeleton" index="3"]
transform = Transform( 0.991626, 0.00170842, -0.129132, -0.00021863, 0.999933, 0.0115506, 0.129142, -0.0114257, 0.991559, 0.08191, -0.00121946, -0.032579 )

[node name="LeftFoot" parent="World/Player/Skeleton" index="4"]
transform = Transform( 0.867567, 0.0189687, 0.496959, -0.0341677, 0.999186, 0.0215127, -0.496147, -0.0356414, 0.867509, 0.16116, 0.00597674, 0.103985 )

[node name="AnimationTree" parent="World/Player" index="12"]
parameters/StateMachine/playback = SubResource( 1 )

[node name="CameraPlayer" parent="World" instance=ExtResource( 4 )]
target = NodePath("../Player")

[node name="CameraMap" type="Camera" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80 )
script = ExtResource( 5 )

[node name="UI" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Health" parent="UI" instance=ExtResource( 6 )]

[node name="Ammo" parent="UI" instance=ExtResource( 7 )]

[node name="Menu" parent="." instance=ExtResource( 8 )]

[node name="InventoryMenu" parent="Menu/MarginContainer/TabContainer/Inventory" index="0"]
inventory = NodePath("../../../../../World/Player/Inventory")

[node name="HBoxContainer" parent="Menu/MarginContainer/TabContainer/Inventory/InventoryMenu/MarginContainer" index="0"]
margin_right = 816.0
margin_bottom = 546.0

[node name="DataPad" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Loading" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Notifications" parent="." instance=ExtResource( 11 )]
[connection signal="died" from="World/Player" to="." method="_on_Player_died"]
[connection signal="health_changed" from="World/Player" to="UI/Health" method="_on_health_changed"]
[connection signal="ammo_selected" from="World/Player/AmmoHandler" to="UI/Ammo" method="_on_ammo_selected"]
[connection signal="shield_changed" from="World/Player/ShieldHandler/Shield" to="UI/Health" method="_on_shield_changed"]

[editable path="World/Player"]

[editable path="Menu"]

[editable path="Menu/MarginContainer/TabContainer/Inventory/InventoryMenu"]
